--- a/GUI/index.html
+++ b/GUI/index.html
@@ -10,7 +10,8 @@
   </head>
   <body>
     <div class="wrapper">
-
+      <img src="images/Magic_logs_detail.png" class="logsleft">
+      <img src="images/Magic_logs_detail1.png" class="logsright">
     </div>
   </body>
 </html>
