--- a/GUI/index.html
+++ b/GUI/index.html
@@ -10,8 +10,8 @@
   </head>
   <body>
     <div class="wrapper">
-      <img src="images/Magic_logs_detail.png" class="logsleft" width="100" height="100">
-      <img src="images/Magic_logs_detail1.png" class="logsright" width="100" height="100">
+      <img src="images/Magic_logs_detail.png" class="logsleft animated rotateIn" width="100" height="100">
+      <img src="images/Magic_logs_detail1.png" class="logsright animated rotateIn" width="100" height="100">
     </div>
   </body>
 </html>
