--- a/GUI/index.html
+++ b/GUI/index.html
@@ -9,9 +9,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   </head>
   <body>
-    <div class="wrapper">
+    <canvas>
       <img src="images/Magic_logs_detail.png" class="logsleft animated rotateIn" width="100" height="100">
       <img src="images/Magic_logs_detail1.png" class="logsright animated rotateIn" width="100" height="100">
-    </div>
+    </canvas>
   </body>
 </html>
