--- a/GUI/index.html
+++ b/GUI/index.html
@@ -6,12 +6,11 @@
     <title>AUOChopper by Cuhlifa</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/animate.css">
+    <link href='http://fonts.googleapis.com/css?family=Raleway:300' rel='stylesheet' type='text/css'>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   </head>
   <body>
-    <canvas>
-      <img src="images/Magic_logs_detail.png" class="logsleft animated rotateIn" width="100" height="100">
-      <img src="images/Magic_logs_detail1.png" class="logsright animated rotateIn" width="100" height="100">
-    </canvas>
+
+    <script src="javascripts/background.js"></script>
   </body>
 </html>
