--- a/GUI/index.html
+++ b/GUI/index.html
@@ -7,10 +7,12 @@
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/animate.css">
     <link href='http://fonts.googleapis.com/css?family=Raleway:300' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet' type='text/css'>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   </head>
   <body>
 
-    <script src="javascripts/background.js"></script>
+    <h1>AIOChooper++</h1>
+
   </body>
 </html>
