--- a/GUI/index.html
+++ b/GUI/index.html
@@ -13,8 +13,7 @@
   <body>
 
     <h1>AIOChooper++</h1>
-
-    <div id="breathing-button">Breathing Button</div>
+    <button type="button" class="startbutton">Start</button>
 
   </body>
 </html>
