--- a/GUI/index.html
+++ b/GUI/index.html
@@ -13,7 +13,7 @@
   <body>
 
     <h1 class="animated zoomInDown">AIOChooper++</h1>
-    <button type="button" class="startbutton">Start</button>
+    <button type="button" class="startbutton animated flip">Start</button>
 
   </body>
 </html>
