--- a/GUI/index.html
+++ b/GUI/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
 
-    <h1 class="animated zoomInDown">AIOChooper++</h1>
+    <h1 class="animated zoomInDown">AIOChopper++</h1>
     <button type="button" class="startbutton animated flip">Start</button>
 
   </body>
